fix z-index on edit/delete dropdown

--- a/frontend/src/components/CommentSection/Comment/Comment.scss
+++ b/frontend/src/components/CommentSection/Comment/Comment.scss
@@ -89,7 +89,7 @@
 	// replies section inside comment component
 	&__replies {
 		position: relative;
-		// z-index: 99;
+		z-index: 1;
 		margin-left: 1.25rem;
 	}
 }
@@ -98,7 +98,7 @@
 	.Comment {
 		padding: 0;
 		position: relative;
-		// z-index: 9;
+		z-index: 102;
 		&__userBar {
 			position: relative;
 			z-index: 20;
@@ -138,7 +138,7 @@
 					border-radius: 100vw;
 					width: 0px;
 					height: 0px;
-					transition: all 0.3s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+					transition: all 0.2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
 					transform-origin: center center;
 				}
 
